[RHCLOUD-38779] Add event type name in OCM emails subjects (#3461)